--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@nestjs-prisma/database",
+  "author": "André Freitas",
   "version": "1.0.2",
   "description": "NestJS DB module",
   "license": "MIT",
