--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "db:seed": "ts-node src/seed/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "4.8.1",
+    "@prisma/client": "^4.8.1",
     "@nestjs/common": "^8.3.1",
     "@types/node": "^18.11.18",
     "prisma": "^4.8.1",
